// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createTemplate: CustomElement hoisting its styles 1`] = `
{
  "content": 
"<nested-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel__15w1ydc p_ju9u1n">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom & hoist styles 1`] = `
{
  "content": 
"<nested-component class="nestedComponent_ey8y76 p1rlu8mi p_8mez4t">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel__15w1ydc p_ju9u1n">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
</nested-component>"
,
  "stylesheets": [
    ".p1rlu8mi{display:flex;}",
    ".p_8mez4t{flex-direction:column;}",
  ],
}
`;

exports[`createTemplate: CustomElement with styled slotted component 1`] = `
{
  "content": 
"<nested-component class="slottedParagraph_g28n4j p91m869">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p_ju9u1n{font-weight:bold;}
        </style><span class="nestedLabel__15w1ydc p_ju9u1n">inside nested template</span>
        <slot
        name="nested"></slot>
    </template>
    <p slot="nested">slotted paragraph</p>
</nested-component>"
,
  "stylesheets": [
    ".p91m869{color:rebeccapurple;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom 1`] = `
{
  "content": 
"<top-component>
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_g28n4j p91m869">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .p_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel__15w1ydc p_ju9u1n">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "stylesheets": [],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles 1`] = `
{
  "content": 
"<top-component class="topComponent_46img7 p131mv1i">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_g28n4j p91m869">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .p_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel__15w1ydc p_ju9u1n">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
</top-component>"
,
  "stylesheets": [
    ".p131mv1i{display:block;}",
  ],
}
`;

exports[`createTemplate: CustomElement with declarative shadow dom and nested declarative shadow dom plus host styles and child 1`] = `
{
  "content": 
"<top-component class="topComponent_46img7 p131mv1i">
    <template shadowrootmode="open" shadowrootdelegatesfocus>
        <style>
            .p91m869{color:rebeccapurple;}
        </style>
        <nested-component class="slottedParagraph_g28n4j p91m869">
            <template shadowrootmode="open" shadowrootdelegatesfocus>
                <style>
                    .p_ju9u1n{font-weight:bold;}
                </style><span class="nestedLabel__15w1ydc p_ju9u1n">inside nested template</span>
                <slot
                name="nested"></slot>
            </template>
            <p slot="nested">slotted paragraph</p>
        </nested-component>
    </template>
    <img class="image__c0ru3k p_mygp1 p_x8x9vx" />
</top-component>"
,
  "stylesheets": [
    ".p131mv1i{display:block;}",
    ".p_mygp1{width:100%;}",
    ".p_x8x9vx{aspect-ratio:16 / 9;}",
  ],
}
`;
